spritebatch improved, gdxpacker importer implemented, animation implemented

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,10 @@
     "[dart]": {
         "editor.rulers": [
             100
-        ],
+        ]
     },
     "editor.codeActionsOnSave": {
         "source.fixAll": true,
-        "source.organizeImports": true,
+        "source.organizeImports": true
     }
 }
